update wards
